Fixed position and z-index of admin footer and header

--- a/src/app/admin/admin.component.scss
+++ b/src/app/admin/admin.component.scss
@@ -57,14 +57,14 @@
         padding: 0;
         background-color: #F4F7FA;
         .content-wrapper {
-            min-height: calc(100vh - 40px);
+            margin-bottom: 40px;
             .header {
 
-                z-index: 0;
+                z-index: 1;
                 position: fixed; ///
                 top: 0;///////////
                 right: 0;///////// Фіксований хідер медіаквері на width 100% знизу
-                width: 85%;/////////
+                width: 83.33333%;/////////
 
                 background-color: #393836;
                 height: 65px;
@@ -129,6 +129,11 @@
         }
         .footer {
             display: flex;
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            z-index: 1;
+            width: 83.3333%;
             justify-content: center;
             align-items: center;
             height: 40px;
